--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@
     background-color: #2C3E50;
     color: white;
     border-radius: 50%;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 8px;
     font-size: 13px;
 }
 
